[package]
name = "robohome_crypto"
version = "0.1.0"
authors = ["Robert Masen <r@robertmasen.pizza>"]
edition = "2018"

[dependencies]
rand = { version = "0.6", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"

[dependencies.x25519-dalek]
version = "0.3"
default-features = false
features = ["std", "u32_backend"]

[lib]
crate-type = ["cdylib", "rlib"]
